Connecting to backEnd

--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -8,7 +8,7 @@
       rgba(255, 255, 255, 0.5),
       rgba(255, 255, 255, 0.5)
     ),
-    url("https://images.pexels.com/photos/302743/pexels-photo-302743.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500");
+    url("https://wallpaperaccess.com/full/625421.jpg");
   background-size: cover;
 }
 
