--- a/src/pages/settings/settings.css
+++ b/src/pages/settings/settings.css
@@ -64,6 +64,7 @@
 .settingsForm > input {
   color: gray;
   margin: 10px 0;
+  padding: 0px 10px;
   height: 30px;
   border: none;
   border-bottom: 1px solid lightgray;
