--- a/src/pages/settings/settings.css
+++ b/src/pages/settings/settings.css
@@ -86,3 +86,9 @@
   cursor: not-allowed;
   color: teal;
 }
+
+@media only screen and (max-width: 800px) {
+  .settings {
+    flex-direction: column;
+  }
+}
