--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -1,25 +1,46 @@
 .about {
-    height: calc(100vh - 50px);
-    display: flex;
-    align-items: center;
-    background-color: #fdfbfb;
+  height: calc(100vh - 50px);
+  display: flex;
+  align-items: center;
+  background-color: #fdfbfb;
 }
 
 .about .imageContainer {
-    flex: 1;
-    height: 80vh;
-    display: flex;
-    justify-content: center;
+  flex: 1;
+  height: 80vh;
+  display: flex;
+  justify-content: center;
 }
 
 .about .imageContainer img {
-    height: 100%;
+  height: 100%;
 }
 
 .about .aboutContainer {
-    flex: 1;
+  flex: 1;
 }
 
 .about .aboutContainer p {
+  font-size: 25px;
+}
+
+@media only screen and (max-width: 800px) {
+  .about {
+    flex-direction: column;
+  }
+
+  .about .imageContainer {
+    height: 50vh;
+    margin-top: 25px;
+  }
+
+  .about .aboutContainer {
+    flex: 1;
+    margin-top: 25px;
+  }
+
+  .about .aboutContainer p {
     font-size: 25px;
+    text-align: center;
+  }
 }
