--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,3 +1,10 @@
 .home {
     display: flex;
 }
+
+@media only screen and (max-width: 800px) {
+    .home{
+        flex-direction: column;
+    }
+  }
+  
