--- a/src/pages/write/write.css
+++ b/src/pages/write/write.css
@@ -76,3 +76,51 @@
   cursor: pointer;
   font-size: 16px;
 }
+
+@media only screen and (max-width: 800px) {
+  .write {
+    padding-top: 20px;
+  }
+
+  .writeImg {
+    margin-left: 20px;
+    margin-bottom: 10px;
+    width: 90vw;
+    height: 250px;
+  }
+
+  .writeFormGroup {
+    margin-left: 10px;
+  }
+
+  .writeIcon {
+    width: 20px;
+    height: 20px;
+    margin-bottom: 10px;
+  }
+
+  .writeInput {
+    font-size: 20px;
+    padding: 10px;
+    width: 70vw;
+    margin-bottom: 10px;
+  }
+
+  .category {
+    margin-left: 10px;
+    color: gray;
+    font-size: 25px;
+    margin-bottom: 10px;
+  }
+
+  .select {
+    font-size: 15px;
+  }
+
+  .writeSubmit {
+    top: 5px;
+    right: 5px;
+    padding: 10px;
+    font-size: 15px;
+  }
+}
