--- a/src/component/topbar/topbar.css
+++ b/src/component/topbar/topbar.css
@@ -53,11 +53,19 @@
 @media only screen and (max-width: 800px) {
   .topLeft,
   .topRight {
+    padding: 0px 5px;
+  }
+
+  .topCenter {
     padding: 0px 10px;
   }
 
+  .topLeft {
+    display: none;
+  }
+
   .topIcon {
-    font-size: 15px;
+    font-size: 13px;
     margin-right: 5px;
   }
 
@@ -71,6 +79,6 @@
 
   .topListItem {
     margin-right: 10px;
-    font-size: 15px;
+    font-size: 13px;
   }
 }
